Add styles for dragHandle and fix Git lock issue

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -37,3 +37,9 @@
     height: 20px;
     cursor: pointer;
 }
+
+.themeSwitcher {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
